--- a/views/group.hbs
+++ b/views/group.hbs
@@ -6,7 +6,10 @@
             <h4>Список участников</h4>
             <br>
             {{#each group}}
-            <button type="button" class="btn cyan darken-1">{{userName}}</button>
+            <div style="display: flex; flex-direction:row; margin-top:5px">
+            <button type="button" style=" width:80%; margin-right:5px " class="btn cyan darken-1">{{userName}}</button>
+            <img src="{{role}}" height='30px' width="30px">
+           </div>
             {{/each}}    
         </div>
         <div class="new" style="display: inline; width:50%">
@@ -17,14 +20,11 @@
              <input type="hidden" name="id" id="id" ></input>
             <button class="btn waves-effect cyan darken-1" type="submit" name="action">Submit
                 <i class="material-icons">add</i>
-            </button>
-            
+            </button>           
         </div>
     </div>
     <br>
-   
-    <button type="submit" class="btn cyan darken-1">Create</button>
-
+    
 </form>
 <script>
     var name = localStorage.getItem("object_name");
