--- a/views/index.hbs
+++ b/views/index.hbs
@@ -201,5 +201,8 @@
     var name2 = localStorage.getItem("object_name2");
     var value1 = JSON.parse(name2).group;
     var value2 = JSON.parse(name2).name;
+    var value3=JSON.parse(name2).number-1;
     document.getElementById('basicInf').innerHTML =value1 + ' :) '+value2;
+     var Uname = {'group':value1, 'name':value2, 'number': value3};
+    localStorage.setItem("object_name7",JSON.stringify(Uname));
 </script>
