--- a/views/group.hbs
+++ b/views/group.hbs
@@ -8,7 +8,8 @@
             {{#each group}}
             <div style="display: flex; flex-direction:row; margin-top:5px">
             <button type="button" style=" width:80%; margin-right:5px " class="btn cyan darken-1">{{userName}}</button>
-            <img src="{{role}}" height='30px' width="30px">
+            <img src="{{role}}" height='30px' width="30px" style="margin-right:5px ">
+            <img src="{{work}}" height='30px' width="30px">
            </div>
             {{/each}}    
         </div>
@@ -17,7 +18,16 @@
             <input id="name" name="newName"></input>
             <label for="name">Фамилия и Имя</label>
             <br>
+            <select style="display: inline; width: 50%" id="group"  id="group" name="groupX">
+            <option value="-" disabled selected >Выберите функционал участника</option>
+            <option value="https://cdn-icons-png.flaticon.com/128/1688/1688502.png">Разработчик</option>
+            <option value="https://cdn-icons-png.flaticon.com/128/476/476664.png">Аналитик</option>
+            <option value="https://cdn-icons-png.flaticon.com/128/646/646496.png">Дизайнер</option>
+            <option value="https://cdn-icons-png.flaticon.com/128/1875/1875561.png">Тестировщик</option>
+            </select>
+            <br><br>
              <input type="hidden" name="id" id="id" ></input>
+              <input type="hidden" name="func" id="func" ></input>
             <button class="btn waves-effect cyan darken-1" type="submit" name="action">Submit
                 <i class="material-icons">add</i>
             </button>           
