--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -1,7 +1,7 @@
 {{> head}}
-<body>
+<body style="background: linear-gradient(to top left, rgb(65, 181, 248),white); height: 100%; no-repeat ;">
     {{> navbar}}
-  <div class="container"></div> 
+  
   {{{body}}} 
 </body>
 </html>
