--- a/views/create.hbs
+++ b/views/create.hbs
@@ -6,6 +6,20 @@
         document.getElementById('id123').value =obg;
         //document.location='/group';       
     }
+
+     function check(value){
+        let i=0;
+        {{#each groups}}
+        if("{{Name}}"==value) i=1;
+        {{/each}}
+        if(i) 
+        {
+            lab.textContent="Такая группа уже существует";
+            myButt.disabled="disabled";          
+        }
+        else {myButt.disabled=0;
+        lab.textContent="Название группы";}
+    }
 </script>
     <form action="/create" method="POST">
     <h2>Экран куратора</h2>
@@ -13,18 +27,18 @@
         <div class="main" style="display: flex; flex-direction:column; width:30%">
             <h4>Существующие группы</h4>
             {{#each groups}}
-            <button type="submit"  class="btn cyan darken-1" onclick="move('{{Name}}','{{_id}}')">{{Name}}</button>
+            <button  class="btn cyan darken-1"  style="margin-bottom: 5px;" onclick="move('{{Name}}','{{_id}}')">{{Name}}</button>
             {{/each}}
             <br>
  <input type="hidden" name="id123" id="id123" value="0" ></input>
         </div>
         <div class="new" style="display: inline; width:50%">
             <h4>Создать новую</h4>
-            <input id="name" name="newName"></input>
-            <label for="name">Название группы</label>
+            <input id="name" name="newName" oninput="check(this.value)"></input>
+            <label id="lab" for="name">Название группы</label>
             <br>
-            <button class="btn waves-effect cyan darken-1" type="submit" name="action">Submit
-                <i class="material-icons">add</i>
+            <button class="button1" id="myButt" name="action">Добавить
+               
             </button>
         </div>
     </div>
