--- a/views/result.hbs
+++ b/views/result.hbs
@@ -1,7 +1,7 @@
 
 <form action="/result" method="POST" >    
     <div class="row">
-    <div class="col s12 m6" style="  margin:0 30% 0 30%; width:40%;">
+    <div class="col s12 m6" style="  margin:0 25% 0 25%; width:50%;">
       <div class="card" >
         <div class="card-image">
           <img src="https://img.wallpapersafari.com/desktop/1440/900/66/72/NpY6Uq.jpg" height="200px" alt="JavaScript test"/>
@@ -14,7 +14,8 @@
       </div>
     </div>
   </div>
-  <button class="btn waves-effect cyan darken-1" type="submit" name="action">Submit </button>
+  <div style="display: flex; align-items: center;">
+  <button class="button1" style="margin-left: auto; margin-right:auto;"  name="action">Submit </button></div>
         <input type="hidden" name="group1" id="group1" value="r" ></input>
           <input type="hidden" name="name1" id="name1" value="0" ></input>
           <input  type="hidden" name="numberX" id="numberX" value="5" ></input>
